# OPENGL_JOURNEY

3D_START/3D_cube/: CMakeLists.txt  main.cpp
3D_START/3D_cube/include/: ShaderHandler.h
3D_START/3d_rendering/: CMakeLists.txt  main.cpp
3D_START/3d_rendering/Shaders/: shader.fs  shader.vs
3D_START/3d_rendering/include/: ShaderHandler.h
3D_START/camera/: CMakeLists.txt  main.cpp
3D_START/camera/Shaders/: shader.fs
Advanced OpenGL/Blending/: CMakeLists.txt  main.cpp
Advanced OpenGL/Cube_Maps/: CMakeLists.txt  main.cpp
Advanced OpenGL/Cube_Maps/shaders/: containerShader.frag  containerShader.vert
Advanced OpenGL/DepthTesting/: CMakeLists.txt  main.cpp
Advanced OpenGL/DepthTesting/Shaders/: outline.frag
Advanced OpenGL/DepthTesting/include/: TextureHandler.h
Advanced OpenGL/Face_Culling/: CMakeLists.txt  main.cpp
Advanced OpenGL/Face_Culling/shaders/: screenShader.frag
Advanced OpenGL/Glass_Blending/: CMakeLists.txt  main.cpp
Advanced OpenGL/Glass_Blending/shaders/: outline.frag  shader.frag
Advanced OpenGL/Stencil/: CMakeLists.txt  main.cpp
Advanced OpenGL/Stencil/include/: model_loader.h
Models/Model_assimp/: CMakeLists.txt  main.cpp
Models/Model_assimp/include/: ShaderHandler.h  TextureHandler.h  model_loader.h
OPENGL_TEMPLATE/: CMakeLists.txt  main.cpp
OPENGL_TEMPLATE/shaders/: shader.frag
OpenGL_include/: TextureHandler.h
Vertex_Editor/: .gitignore  CMakeLists.txt  main.cpp
Vertex_Editor/OpenGL_include/: ShaderHandler.h  TextureHandler.h
Vertex_Editor/OpenGL_include/glad/include/glad/: glad.h
Vertex_Editor/OpenGL_include/glad/src/: glad.c
Vertex_Editor/include/: CameraHandler.h  GUI.h  HalfEdge.h  MainWindow.h  Mesh.h  MouseHandling.h  Renderer.h  Scene.h
Vertex_Editor/shaders/: colorPickingShader.frag  edgePass.frag  edgePass.geom  edgePass.vert  mainEdgePass.frag  shader.frag  shader.geom  shader.vert  vertexPass.frag
Vertex_Editor/src/: CameraHandler.cpp  GUI.cpp  HalfEdge.cpp  MainWindow.cpp  Mesh.cpp  MouseHandling.cpp  Renderer.cpp  Scene.cpp
lighting/first_light/: CMakeLists.txt  main.cpp
lighting/first_light/Shaders/: lightSourceShader.frag  shader.frag
lighting/first_light/include/: ShaderHandler.h
lighting/light_casters/: CMakeLists.txt  main.cpp
lighting/light_casters/Shaders/: shader.frag
lighting/lighting_maps/: CMakeLists.txt  main.cpp
lighting/lighting_maps/Shaders/: shader.frag
lighting/materials1/: CMakeLists.txt  main.cpp
lighting/materials1/Shaders/: shader.frag  shader.vert
lighting/multiple_lights/: CMakeLists.txt  main.cpp
lighting/multiple_lights/Shaders/: lightSourceShader.frag  shader.frag
lighting/point_light/: CMakeLists.txt  main.cpp
lighting/point_light/Shaders/: shader.frag
lighting/spotlight/: CMakeLists.txt  main.cpp
lighting/spotlight/Shaders/: .shader.frag.kate-swp  shader.frag  shader.vert
textures/texture_excercise_3/: CMakeLists.txt  main.cpp
textures/texture_excercise_3/Shaders/: shader.fs
transformations/: CMakeLists.txt  main.cpp
transformations/Shaders/: shader.vs
